# scripps-workflow

./: .gitignore  README.md  pyproject.toml
nodes/roles/: conformer_screen.yaml  nmr_aggregate.yaml
src/scripps_workflow/: __init__.py  env.py  equivalence.py  hashing.py  logging_utils.py  nmr_calibration.py  node.py  orca.py  parsing.py  pointer.py  schema.py  slurm.py  tag.py  thermo.py
src/scripps_workflow/contracts/: __init__.py  conformer_screen.py
src/scripps_workflow/nodes/: __init__.py  crest.py  marc_screen.py  nmr_aggregate.py  orca_dft_array.py  orca_goat.py  orca_thermo_array.py  prism_screen.py  smiles_to_3d.py  tag_input.py  thermo_aggregate.py  xtb_calc.py
tests/: test_contract_conformer_screen.py  test_crest.py  test_env_wrapper.py  test_equivalence.py  test_hashing.py  test_marc_screen.py  test_nmr.py  test_node.py  test_orca.py  test_orca_dft_array.py  test_orca_goat.py  test_orca_thermo_array.py  test_parsing.py  test_pointer.py  test_prism_screen.py  test_schema.py  test_slurm.py  test_smiles_to_3d.py  test_tag.py  test_thermo.py  test_thermo_aggregate.py  test_xtb_calc.py
tools/: export_nodes.py  export_workflow.py
workflows/: nmr_predictor.py
